<?xml version="1.0" encoding="utf-8"?><!--xml layer starts here
xml stands for extensible markup language
it is a background code of layouts,widges etc-->
<!--Linear layout is one of the types of layout
It aligns views one by one that is by vertically/horizontally
layout_width indicates the width of the Linear layout
layout_Height indicates the height of the Linear layout
context indicates the package name of the respective java class
match parent will take complete height or width of text
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tharani.weatherapp.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
         <!--Here taking linear layout for Location-->
        <LinearLayout
            android:weightSum="2"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <!--Here taking text view for displaying Location
                 TextView is one of component of palette to display anything on layout
                 width indicates the width of the TextView
                 Height indicates the height of the TextView
                 wraps content wraps the enter content
                 layout_margin,layout_centerHorizontal indicates directions-->
            <TextView
                android:layout_weight="1"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="LOCATION :- "/>
            <!--Here taking 2 textview for displaying location information-->
            <TextView
                android:layout_weight="1"
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/location"/>

        </LinearLayout>

        <!--Here taking another linear layout for cordinate-->

        <LinearLayout
            android:weightSum="2"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <!--Here taking 2 textview for displaying cordinate information-->
            <TextView
                android:layout_weight="1"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/cordinate"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/coordinate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/coordinate"/>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/border"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <!--Here Taking another 2 textview to displaying  Weather information-->
            <TextView
                android:layout_weight="1"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="WEATHER :- "/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/weather"/>
        </LinearLayout>
        <!--Here taking another linear layout for temperature-->

        <LinearLayout
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <!--Here taking another 2 textview for displaying temperature-->
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="TEMPERATURE :- "/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/temperature"/>
        </LinearLayout>
        <!--Here taking another linear layout for humidity-->

        <LinearLayout
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <!--Here taking 2 textview for displaying humidity information-->
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="HUMIDITY :- "/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/humidity"/>
        </LinearLayout>
        <!--Here taking another linear layout for sunrise-->

        <LinearLayout
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <!--Here taking 2 textview for displaying sunrise information-->
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="SUNRISE :- "/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/sunrise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/sunrise"/>
        </LinearLayout>
        <!--Here taking another linear layout for sunset-->

        <LinearLayout
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <!--Here taking 2 textview for displaying sunset information-->
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="SUNSET :- "/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/sunset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/sunset"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout><!--LinearLayout ends here-->
